# status-tracker

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  Dockerfile  HEARTBEAT.md  HISTORY.md  IDENTITY.md  MEMORY.md  PING_SYSTEM_2_0_PLAN.md  PLAN.md  README.md  ROUTINE.md  SOUL.md  TESTING.md  TEST_PLAN.md  TOOLS.md  USER.md  apply_ollama_config.js  apply_via_gateway.js  brave-scraper-mcp.skill  check_db.py  check_tasks.py  docker-compose.yml  fix_task_5.py  generate_ollama_patch.js  index.html  main.py  mcp_page_source.html  migrate_v2.py  notifications.py  openclaw.json.bak  pyproject.toml  requirements.txt  research_subagent_skills.md  residential-proxy-kyc-research.md  status_page.html  task5.json  test_batch.py  (+2 more)
.clawhub/: lock.json
.openclaw/: workspace-state.json
agent-skill/: SKILL.md
config/: mcporter.json
data/: .gitkeep  README.md
memory/: 2026-02-07.md  2026-02-08.md  2026-02-08_extra.md  2026-02-09.md  2026-02-10-1703.md  2026-02-10-1708.md  2026-02-10-1711.md  2026-02-10-1713.md  2026-02-10-1718.md  2026-02-10-1740.md  2026-02-10-1813.md  2026-02-10-1820.md  2026-02-10-1824.md  2026-02-10-1834.md  2026-02-10-1836.md  2026-02-10-1842.md  2026-02-10-1848.md  2026-02-10-1917.md  2026-02-10-1936.md  2026-02-10-1938.md  2026-02-10.md  2026-02-11-0526.md  2026-02-11-1630.md  2026-02-11.md  2026-02-12-1309.md  2026-02-12-1404.md  2026-02-12-1408.md  2026-02-12-1647.md  2026-02-12-1648.md  2026-02-12-1654.md  2026-02-12-1801.md  2026-02-12-1820.md  2026-02-12-2007.md  2026-02-12-2044.md  2026-02-12.md  2026-02-13-0524.md  (+58 more)
(+36 files in other folders)
